fix: checkout action을 이용해 CI 서버 내부에 소스코드 다운받기

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
   build-lib:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Install dependencies
         run: |
           sudo apt install gcc make
