기타 자잘한 임시적인 변경사항들

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,4 +3,9 @@ include $(top_srcdir)/Make_global.am
 lib_LTLIBRARIES = libuallsyms.la
 
 libuallsyms_la_LDFLAGS = -Wl,--version-script=$(srcdir)/libuallsyms.map -version-info $(LIBVERSION)
-libuallsyms_la_SOURCES = uallsyms.c uallsyms.h
+libuallsyms_la_SOURCES =    uallsyms.c      \
+                            uallsyms.h      \
+                            uname.c         \
+                            uname.h         \
+                            arch/x86_64.c   \
+                            arch/x86_64.h
